--- a/UPGRADE.asciidoc
+++ b/UPGRADE.asciidoc
@@ -66,6 +66,31 @@ Once the additionnal steps are completed, restart packetfence-config and packetf
 Upgrading from a version prior to X.Y.Z
 ---------------------------------------
 
+Systemd configuration
+^^^^^^^^^^^^^^^^^^^^^
+
+All PacketFence services are managed individually via systemd unit files instead of one unit file (`packetfence.service`).
+
+You should make sure the `packetfence` service is disabled so that it doesn't start the services.
+
+  # systemctl disable packetfence.service
+
+When you updated the packetfence package, it already set the system target to `packetfence.target`.
+
+MariaDB configuration
+^^^^^^^^^^^^^^^^^^^^^
+
+If you are hosting the MySQL/MariaDB service on your PacketFence servers (it is by default), you should now manage the service via `packetfence-mariadb.service` instead of `mariadb.service`
+
+Maintenance configuration
+^^^^^^^^^^^^^^^^^^^^^^^^^
+
+Maintenance related configuration for pfmon has been moved to a dedicated configuration file (`/usr/local/pf/conf/pfmon.conf`).
+
+In order to migrate your settings from pf.conf to pfmon.conf, run the following script:
+
+  /usr/local/pf/addons/upgrade/to-7.0-pf.conf-to-pfmon.conf.pl
+
 Once completed, update the file /usr/local/pf/conf/currently-at to match the new release number (PacketFence X.Y.Z).
 
 Upgrading from a version prior to 6.5.0
