--- a/UPGRADE.asciidoc
+++ b/UPGRADE.asciidoc
@@ -116,6 +116,15 @@ In order to rename those in an automated way:
   sed -i "s/computer_name/computername/g" conf/dhcp_filters.conf
   sed -i "s/DhcpFingerbank/Fingerbank/g" conf/dhcp_filters.conf
 
+Roles configuration
+^^^^^^^^^^^^^^^^^^^
+
+The source of truth for roles is now in a configuration file instead of being in the database. In order to pull the existing roles from your database into the configuration file, execute the following command:
+
+  /usr/local/pf/addons/upgrade/to-7.0-roles-conf.pl
+
+NOTE: The roles still exist in the database like before (node_category table), but their source of truth is now in the configuration file. Should you remove a role manually from roles.conf, it will *not* be removed from the database unless you manually go delete it from the database.
+
 Upgrading from a version prior to 6.5.0
 ---------------------------------------
 
